Fixed bug - modal window width. Added z-index.

--- a/src/sass/2-components/_modal-product--ingredients.scss
+++ b/src/sass/2-components/_modal-product--ingredients.scss
@@ -1,32 +1,13 @@
-.backdrop {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
   .modal {
     position: absolute;
+    z-index: 10;
     top: 0;
     left: 0;
-    width: 100%;
-         
-    transform: translate(-50%, -50%) scale(1);
     background: $white;
     border: 2px solid $yellow;
     border-radius: 10px;
-
   }
-  .backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
-  .backdrop.is-hidden .modal{
-  transform: translate(-50%, -50%) scale(0.9);
-  }
-
-  
+    
 .modal__title {
   margin-top: 28px;
   margin-left: 69px;
@@ -128,7 +109,9 @@ form {
   margin-bottom: 48px;
 }
 .submit-form__button {
-  @include btn-mobile($yellow);
+  margin-right: auto;
+  margin-left: auto;
+ @include btn-mobile($yellow);
   @include btn-border(1px, $yellow);
   &:focus,
   &:hover {
@@ -152,25 +135,23 @@ form {
   font-size: 12px;
   line-height: 140%;
 }
-
-input-desktop{
-  padding: 11px 152px 11px 16px;
-
-  background: rgba(248, 210, 78, 0.1);
-  border: 1px solid $dark-green;
-  border-radius: 10px;
- font-size: 14px;
- line-height: 140%;
+.modal__submit-form label{
+  display: inline-flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .modal__submit-form{
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
-
-  & input,
+   & input,
   & textarea
   {
     @extend %input-mobile;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 16px;
   }
 }
 
@@ -187,6 +168,8 @@ input-desktop{
         min-width: 90px;
     }
     .submit-form__button {
+      margin-right: auto;
+      margin-left: auto;
         @include btn-desktop($yellow);
         @include btn-border(2px, $yellow);
         &:focus,
@@ -204,12 +187,18 @@ input-desktop{
       }
     .modal{
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 568px;
     }
-    .modal__submit-form input,
-    .modal__submit-form textarea{
-padding: 11px 152px 11px 16px;
+   
+  .modal__submit-form input,
+  .modal__submit-form textarea
+  {
+  padding: 11px 152px 11px 16px;
 
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid $dark-green;
