--- a/src/sass/3-UI/_buttons.scss
+++ b/src/sass/3-UI/_buttons.scss
@@ -1,4 +1,5 @@
 @mixin btn-desktop($color) {
+display: inline-block;
 padding: 12px 36px;
 border-radius: 10px;
 font-weight: 600;
@@ -6,6 +7,7 @@ line-height: 18px;
 background-color: $color;
 }
 @mixin btn-mobile($color) {
+display: inline-block;
 padding: 11px 26px;
 border-radius: 8px;
 font-weight: 600;
