--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -888,6 +888,7 @@ address {
   margin-top: -333px;
 }
 .footer-button__submit {
+  display: inline-block;
   padding: 11px 26px;
   border-radius: 8px;
   font-weight: 600;
@@ -1190,33 +1191,13 @@ address {
     font-size: 12px;
   }
 }
-.backdrop {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  transform: translate(-50%, -50%) scale(1);
   background: #fcfcfc;
   border: 2px solid #f8d24e;
   border-radius: 10px;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9);
 }
 
 .modal__title {
@@ -1326,6 +1307,7 @@ form {
 }
 
 .submit-form__button {
+  display: inline-block;
   padding: 11px 26px;
   border-radius: 8px;
   font-weight: 600;
@@ -1334,6 +1316,7 @@ form {
   border: 1px solid #f8d24e;
 }
 .submit-form__button:focus, .submit-form__button:hover {
+  display: inline-block;
   padding: 11px 26px;
   border-radius: 8px;
   font-weight: 600;
@@ -1345,6 +1328,7 @@ form {
   color: #fcfcfc;
 }
 .submit-form__button:disabled {
+  display: inline-block;
   padding: 11px 26px;
   border-radius: 8px;
   font-weight: 600;
@@ -1362,20 +1346,17 @@ form {
   line-height: 140%;
 }
 
-input-desktop {
-  padding: 11px 152px 11px 16px;
-  background: rgba(248, 210, 78, 0.1);
-  border: 1px solid #84a178;
-  border-radius: 10px;
-  font-size: 14px;
-  line-height: 140%;
-}
-
 .modal__submit-form {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
 }
+.modal__submit-form input, .modal__submit-form textarea {
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 16px;
+}
+
 @media screen and (min-width: 768px) {
   .modal__title::after {
     width: 132px;
@@ -1389,6 +1370,9 @@ input-desktop {
     min-width: 90px;
   }
   .submit-form__button {
+    margin-right: auto;
+    margin-left: auto;
+    display: inline-block;
     padding: 12px 36px;
     border-radius: 10px;
     font-weight: 600;
@@ -1397,6 +1381,7 @@ input-desktop {
     border: 2px solid #f8d24e;
   }
   .submit-form__button:focus, .submit-form__button:hover {
+    display: inline-block;
     padding: 12px 36px;
     border-radius: 10px;
     font-weight: 600;
@@ -1408,6 +1393,7 @@ input-desktop {
     color: #fcfcfc;
   }
   .submit-form__button:disabled {
+    display: inline-block;
     padding: 12px 36px;
     border-radius: 10px;
     font-weight: 600;
